--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,38 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1">
+
+    <TextView
+        android:text="不需要相机，直接扫描屏幕上的二维码，由于微信采用特殊的加密网址，不支持第三方应用扫描微信名片。您可以扫描微博，知乎，支付宝等大多数二维码。"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="63dp"
+        android:id="@+id/textView2" />
 
     <Switch
         android:text="开启摇一摇解析二维码"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/switch1"
-        android:layout_weight="0.24" />
-</LinearLayout>
+        android:layout_weight="0.24"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="73dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/feedBack"
+        android:text="反馈开发者"
+        android:layout_marginBottom="68dp"/>
+
+</RelativeLayout>
